--- a/src/main/resources/config/flatlaf/FlatLightLaf.properties
+++ b/src/main/resources/config/flatlaf/FlatLightLaf.properties
@@ -14,7 +14,7 @@ Menu.button.background=darken(@background,10%)
 Menu.button.selectedBackground=darken($Menu.background,5%)
 Menu.button.selected=$App.accent.lightblue
 Menu.button.selectedForeground=$Menu.foreground
-Menu.lateral.background = $App.accent.blue
+Menu.lateral.background = $App.accent.yellow
 Menu.lateral.foreground=rgb(245,245,245)
 Menu.lateral.lineColor=darken($Menu.foreground,25%)
 
@@ -38,5 +38,5 @@ App.accent.lightblue = #ADD8E6
 App.accent.purple = #BF5AF2
 App.accent.red = #FF3B30
 App.accent.orange = #FF9500
-App.accent.yellow = #FFCC00
+App.accent.yellow = #FFC800
 App.accent.green = #28CD41
