--- a/src/main/resources/config/flatlaf/FlatLightLaf.properties
+++ b/src/main/resources/config/flatlaf/FlatLightLaf.properties
@@ -3,7 +3,7 @@
 @background=rgb(250,250,250)
 
 #Menu.background=rgb(36, 104, 155)
-Menu.background = $App.accent.blue
+Menu.background = $App.accent.yellow
 Menu.foreground=rgb(245,245,245)
 Menu.lineColor=darken($Menu.foreground,25%)
 Menu.arrowColor=darken($Menu.foreground,5%)
@@ -12,7 +12,7 @@ Menu.lightdark.button.background=shade($Menu.lightdark.background,20%)
 Menu.title.foreground=darken($Menu.foreground,25%)
 Menu.button.background=darken(@background,10%)
 Menu.button.selectedBackground=darken($Menu.background,5%)
-Menu.button.selected=$App.accent.lightblue
+Menu.button.selected=$App.accent.lightyellow
 Menu.button.selectedForeground=$Menu.foreground
 Menu.lateral.background = $App.accent.yellow
 Menu.lateral.foreground=rgb(245,245,245)
@@ -39,4 +39,6 @@ App.accent.purple = #BF5AF2
 App.accent.red = #FF3B30
 App.accent.orange = #FF9500
 App.accent.yellow = #FFC800
+App.accent.lightyellow = #FFF4B3
 App.accent.green = #28CD41
+
