--- a/src/main/resources/config/flatlaf/FlatLightLaf.properties
+++ b/src/main/resources/config/flatlaf/FlatLightLaf.properties
@@ -1,10 +1,10 @@
 
-@foreground=rgb(60,60,60)
+@foreground=$App.accent.default
 @background=rgb(250,250,250)
 
 #Menu.background=rgb(36, 104, 155)
 Menu.background = $App.accent.yellow
-Menu.foreground=rgb(245,245,245)
+Menu.foreground=$App.accent.default
 Menu.lineColor=darken($Menu.foreground,25%)
 Menu.arrowColor=darken($Menu.foreground,5%)
 Menu.lightdark.background=darken($Menu.background,5%)
@@ -15,7 +15,7 @@ Menu.button.selectedBackground=darken($Menu.background,5%)
 Menu.button.selected=$App.accent.lightyellow
 Menu.button.selectedForeground=$Menu.foreground
 Menu.lateral.background = $App.accent.yellow
-Menu.lateral.foreground=rgb(245,245,245)
+Menu.lateral.foreground=$App.accent.default
 Menu.lateral.lineColor=darken($Menu.foreground,25%)
 
 Menu.ScrollBar.background=$Menu.background
@@ -31,7 +31,8 @@ Toast.warning.outlineColor=#ff9800
 Toast.error.outlineColor=#ef5350
 
 # Accent Color
-App.accent.default = #2675BF
+#App.accent.default = #2675BF
+App.accent.default = #808080
 #App.accent.blue = #007AFF
 App.accent.blue = #24689B
 App.accent.lightblue = #ADD8E6
