--- a/src/main/resources/config/flatlaf/FlatLightLaf.properties
+++ b/src/main/resources/config/flatlaf/FlatLightLaf.properties
@@ -9,11 +9,14 @@ Menu.lineColor=darken($Menu.foreground,25%)
 Menu.arrowColor=darken($Menu.foreground,5%)
 Menu.lightdark.background=darken($Menu.background,5%)
 Menu.lightdark.button.background=shade($Menu.lightdark.background,20%)
-Menu.title.foreground=darken($Menu.foreground,25%)
+Menu.title.foreground=$Menu.foreground
+#Menu.title.foreground=darken($Menu.foreground,25%)
+
 Menu.button.background=darken(@background,10%)
 Menu.button.selectedBackground=darken($Menu.background,5%)
 Menu.button.selected=$App.accent.lightyellow
 Menu.button.selectedForeground=$Menu.foreground
+
 Menu.lateral.background = $App.accent.yellow
 Menu.lateral.foreground=$App.accent.default
 Menu.lateral.lineColor=darken($Menu.foreground,25%)
@@ -32,7 +35,7 @@ Toast.error.outlineColor=#ef5350
 
 # Accent Color
 #App.accent.default = #2675BF
-App.accent.default = #808080
+App.accent.default = rgb(64,64,64)
 #App.accent.blue = #007AFF
 App.accent.blue = #24689B
 App.accent.lightblue = #ADD8E6
