--- a/src/main/resources/config/flatlaf/FlatLightLaf.properties
+++ b/src/main/resources/config/flatlaf/FlatLightLaf.properties
@@ -3,7 +3,7 @@
 @background=rgb(250,250,250)
 
 #Menu.background=rgb(36, 104, 155)
-Menu.background = $App.accent.yellow
+Menu.background = $App.accent.orange
 Menu.foreground=$App.accent.default
 Menu.lineColor=darken($Menu.foreground,25%)
 Menu.arrowColor=darken($Menu.foreground,5%)
@@ -14,10 +14,10 @@ Menu.title.foreground=$Menu.foreground
 
 Menu.button.background=darken(@background,10%)
 Menu.button.selectedBackground=darken($Menu.background,5%)
-Menu.button.selected=$App.accent.lightyellow
+Menu.button.selected=$App.accent.lightorange
 Menu.button.selectedForeground=$Menu.foreground
 
-Menu.lateral.background = $App.accent.yellow
+Menu.lateral.background = $App.accent.orange
 Menu.lateral.foreground=$App.accent.default
 Menu.lateral.lineColor=darken($Menu.foreground,25%)
 
@@ -42,6 +42,7 @@ App.accent.lightblue = #ADD8E6
 App.accent.purple = #BF5AF2
 App.accent.red = #FF3B30
 App.accent.orange = #FF9500
+App.accent.lightorange = #FFD699
 App.accent.yellow = #FFC800
 App.accent.lightyellow = #FFF4B3
 App.accent.green = #28CD41
