--- a/src/main/resources/config/flatlaf/FlatLightLaf.properties
+++ b/src/main/resources/config/flatlaf/FlatLightLaf.properties
@@ -3,21 +3,21 @@
 @background=rgb(250,250,250)
 
 #Menu.background=rgb(36, 104, 155)
-Menu.background = $App.accent.orange
+Menu.background=$App.accent.yellow
 Menu.foreground=$App.accent.default
 Menu.lineColor=darken($Menu.foreground,25%)
 Menu.arrowColor=darken($Menu.foreground,5%)
 Menu.lightdark.background=darken($Menu.background,5%)
 Menu.lightdark.button.background=shade($Menu.lightdark.background,20%)
-Menu.title.foreground=$Menu.foreground
-#Menu.title.foreground=darken($Menu.foreground,25%)
+#Menu.title.foreground=$Menu.foreground
+Menu.title.foreground=darken($Menu.foreground,25%)
 
 Menu.button.background=darken(@background,10%)
 Menu.button.selectedBackground=darken($Menu.background,5%)
-Menu.button.selected=$App.accent.lightorange
+Menu.button.selected=$App.accent.lightyellow
 Menu.button.selectedForeground=$Menu.foreground
 
-Menu.lateral.background = $App.accent.orange
+Menu.lateral.background = $App.accent.yellow
 Menu.lateral.foreground=$App.accent.default
 Menu.lateral.lineColor=darken($Menu.foreground,25%)
 
