--- a/src/main/resources/config/flatlaf/FlatLaf.properties
+++ b/src/main/resources/config/flatlaf/FlatLaf.properties
@@ -31,3 +31,11 @@ Popup.dropShadowInsets = 2,5,8,8
 
 AccentControl.show=false
 
+TopPanel.estado.font = bold +2
+TopPanel.estado.abierto.background = #C8FFC8
+TopPanel.estado.abierto.foreground = #007800
+TopPanel.estado.cerrado.background = #FFDCDC
+TopPanel.estado.cerrado.foreground = #960000
+
+TopPanel.sub.font = plain +0
+TopPanel.sub.foreground = #5A5A5A
