--- a/src/main/resources/config/flatlaf/FlatLaf.properties
+++ b/src/main/resources/config/flatlaf/FlatLaf.properties
@@ -39,3 +39,9 @@ TopPanel.estado.cerrado.foreground = #960000
 
 TopPanel.sub.font = plain +0
 TopPanel.sub.foreground = #5A5A5A
+
+
+PanelCaja.caja.abierta.background = rgb(200,255,200)
+PanelCaja.caja.abierta.foreground  = rgb(0, 120, 0)
+PanelCaja.caja.cerrada.background = rgb(255, 220, 220)
+PanelCaja.caja.cerrada.foreground  = rgb(150, 0, 0)
